--- a/nextflow.config
+++ b/nextflow.config
@@ -88,7 +88,8 @@ profiles {
   docker { docker.enabled = true }
   singularity { singularity.enabled = true }
   test { includeConfig 'conf/test.config' }
-  tartu_hpc { includeConfig 'conf/tartu_hpc.config' }	
+  tartu_hpc { includeConfig 'conf/tartu_hpc.config' }
+  base { includeConfig 'conf/base.config' }
 }
 
 // Load igenomes.config if required
